--- a/bower.json
+++ b/bower.json
@@ -29,10 +29,6 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "vendor",
-    "test",
-    "tests",
-    "js/demo",
-    "css/plugins"
+    "vendor"
   ]
 }
